# Hello_world

./: .gitignore  1.txt  CMakeLists.txt_note.md  Cmake_note.md  Index.md  README.md  test.txt  tmp.md
00000/: mp.txt  mymp.txt  mymp启动之后.txt  note.txt  tmp  开发板启动之后.txt  更改记录.txt
00_Linux/: Index.md  Linux_Command.md  Linux_FS.md
01_Compile/: Compile_process.md  Index.md  Static_linking_and_dynamic_linking.md
02_U-boot/: note.md
02_U-boot/ATF/: ATF.md  (+2 more)
03_Kernel/: tmp.txt
04_Rootfs/: note.md
05_Yocto/: Download_Guidance.md  note.md
06_CMake/: CMakeLists.txt_note.md  CMake_note.md
07_Makefile/: note.md
08_STM32/: note.md
09_Circuit_diagram/: note.md
10_GitHub_problem/: GitHub_timeout.md  GitHub_upload_command.md  Github_work_flow.md  Gitignore_Guidence.md  Index.md
Abbreviation/: abbreviation.md
CMake/: CMakeLists.txt_note.md  CMake_note.md
CMake_learning_note/: CMakeLists.txt_note.md  CMake_note.md  test.txt
CMake_test/: CMakeLists.txt  my_path.txt
CMake_test/src/: divv.cpp  multi.cpp
Circuit_diagram/: note.md
GitHub/: GitHub命令行上传.md  GitHub连接超时.md
GitHub_problem/: GitHub命令行上传.md  GitHub连接超时.md
Linux_Command/: note.md
Makefile/: note.md
Makefile_learning_note/: Makefile_theory.md
Miscellaneous_note/: note.md
Public_Computer_and_wifi/: note.md
STM32/: note.md  解决VSCode编辑Cube IDE路径报错飘红问题.md
Static linking and dynamic linking/: note.md
Static linking and dynamic linking_learning_note/: note.md
U-boot/: note.md
Yocto/: Download_Guidance.md  Guidance.md  note.md
rootfs/: note.md
rootfs_learning_note/: note.md
(+25 files in other folders)
